--- a/css/index.css
+++ b/css/index.css
@@ -20,3 +20,126 @@
 	stroke: #000;
 	shape-rendering: crispEdges;
 }
+
+html, body {
+	margin: 0;
+	padding: 0;
+
+	width: 100%;
+	height: 100%;
+
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.main{
+	background: #fff;
+	width: 100%;
+	height: 100%;
+
+	display:block;
+    padding: 1vh;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+#main_container{
+	background:#555;
+	display:flex;
+	flex-direction: column;
+
+	padding: 1vh;
+	
+	height: 98vh;
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+	
+	text-align: center;
+}
+
+#page_title{
+	background: #fff;
+	font-family: 'Comfortaa', cursive;
+	font-size: 50;
+	padding: 1vh;
+}
+
+.content_container{
+	height: 100%;
+	widows: 100%;
+
+	display:flex;
+	flex-direction: column;
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.toolbar_container{
+	background: #fff;
+	text-align: center;
+	justify-content: center;
+	height: auto;
+
+	display:flex;
+	flex-direction: column;
+
+    padding: 1vh;
+    /* -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; */
+}
+
+.toolbar_item{
+	background: lightskyblue;
+
+	padding: 1vh;
+}
+
+#comm_data_drop_menu{
+	font-family: 'Comfortaa', cursive;
+}
+
+.data_container{
+	width: 100%;
+	height: 100%;
+	padding: 1vh;
+	background: #fff;
+
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.data{
+	background: lightskyblue;
+
+	padding: 1vh;
+}
+
+.box {
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+
+	margin-bottom: 1vh;
+
+	-webkit-box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+	-moz-box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+	box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+}
+
+.box_last {
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+
+	-webkit-box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+	-moz-box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+	box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+}
