--- a/css/index.css
+++ b/css/index.css
@@ -111,13 +111,18 @@ html, body {
 	padding: 1vh;
 	background: #fff;
 
+	display:flex;
+	flex-direction: column;
+
 	-webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
 .data{
-	background: lightskyblue;
+	background: red;
+
+	height: 100%;
 
 	padding: 1vh;
 }
